syntax = "proto3";

package blog;

option java_package = "com.proto.blog";
option java_multiple_files = true;

import "google/protobuf/empty.proto";

message Blog {
  string id = 1;
  string author_id = 2;
  string title = 3;
  string content = 4;
}

message BlogId {
  string id = 1;
}

service BlogService {
  rpc createBlog(Blog) returns (BlogId) {};
  rpc readBlog(BlogId) returns (Blog) {};
  rpc updateBlog(Blog) returns (Blog){};
  rpc deleteBlog(BlogId) returns (BlogId){};
  rpc listBlog(google.protobuf.Empty) returns (stream Blog){};
}